--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         body {
             width: 100vw;
             height: 100vh;
+            overflow: hidden;
         }
         canvas {
             width: 100%;
